test/compile-fail/resolution/pub/in-non-ancestral-super/expected.txt
error: `c` is not an ancestor of `super`
 --> top.rhdl:2:18
  |
2 |     pub(in super::c) struct b {}
  |                   ^ not an ancestor
